fix line pos on mobile, rename css files

--- a/packages/site_package/ContentBlocks/ContentElements/images-collection/Assets/Frontend.css
+++ b/packages/site_package/ContentBlocks/ContentElements/images-collection/Assets/Frontend.css
@@ -23,10 +23,14 @@
         .line {
             position: absolute;
             right: 0;
-            bottom: 1.4rem;
+            bottom: 50%;
             left: 0;
             z-index: 0;
             border-top: 4px dotted var(--color-black);
+
+            @media (width <= 640px) {
+                bottom: 0;
+            }
         }
     }
 
@@ -40,7 +44,6 @@
             margin-bottom: 0.5rem;
 
             img {
-                border-radius: 0.3rem;
                 width: 100%;
                 max-width: 700px;
                 height: 100%;
