--- a/packages/site_package/Resources/Public/Css/header.css
+++ b/packages/site_package/Resources/Public/Css/header.css
@@ -1,4 +1,4 @@
-.header-navigations {
+.main-header > div {
     display: flex;
     justify-content: space-between;
     padding: 2rem;
